# serializer version: 1
# name: test_codegen_file_backed_duckdb
  '''
  from semolina import Dimension, Fact, Metric, SemanticView
  
  
  class SalesView(SemanticView, view="sales_view"):
      unit_price = Fact[int]()
      country = Dimension[str]()
      region = Dimension[str]()
      revenue = Metric[int]()
      cost = Metric[int]()
  
  
  '''
# ---
# name: test_codegen_snowflake_field_types
  '''
  import datetime
  
  from semolina import Dimension, Fact, Metric, SemanticView
  
  
  class SalesView(SemanticView, view="sales_view"):
      revenue = Metric[int]()
      country = Dimension[str]()
      date_key = Fact[datetime.date]()
  
  '''
# ---
